# Mp3Recorder

./: .gitignore  Mp3Recorder.jks  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cos/mos/recorder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/cpp/: CMakeLists.txt  lame_util.cpp  lame_util.h
app/src/main/cpp/libmp3lame/: CMakeLists.txt
app/src/main/java/cos/mos/recorder/: MainActivity.java
app/src/main/java/cos/mos/recorder/cache/: RecorderService.java
app/src/main/java/cos/mos/recorder/dao/: DBHelper.java  RecorderDB.java  S.java
app/src/main/java/cos/mos/recorder/decode/: DataEncodeThread.java  MP3Recorder.java  PCMFormat.java  ULame.java
app/src/main/java/cos/mos/recorder/init/: KApp.java
app/src/main/java/cos/mos/recorder/record/: RecordingService.java
app/src/main/java/cos/mos/recorder/ui/: MainActivity.java  Mp3Adapteer.java  PlayActivity.java  SplashActivity.java
app/src/main/java/cos/mos/recorder/ui/main/: PageViewModel.java  PlaceholderFragment.java  SectionsPagerAdapter.java
app/src/main/res/drawable/: record_progress_bar.xml  record_progress_bar_background.xml  sl_tune.xml
app/src/main/res/layout/: activity_main.xml  activity_play.xml  fragment_main.xml  lay_list.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cos/mos/recorder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
